[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Ressources/Themes/LyricsEditor.tres" type="StyleBox" id=1]
[ext_resource path="res://src/Scenes/SubOptions/Downloader/QueuedDownloadContainer.gd" type="Script" id=2]
[ext_resource path="res://src/assets/Icons/White/Audio/Replay/stop_72px.png" type="Texture" id=3]

[node name="QueuedDownloadContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -550.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1120.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftEmpty" type="Control" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 72.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 1062.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1044.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Left"]
margin_right = 510.0
margin_bottom = 18.0
text = "Title"
valign = 1
clip_text = true

[node name="URL" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Left"]
margin_top = 26.0
margin_right = 510.0
margin_bottom = 44.0
text = "URL"
clip_text = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 518.0
margin_right = 526.0
margin_bottom = 44.0

[node name="Right" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 534.0
margin_right = 1044.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="AudioVideo" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Right"]
margin_right = 510.0
margin_bottom = 18.0
text = "Audio"
valign = 1

[node name="Format" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Right"]
margin_top = 26.0
margin_right = 510.0
margin_bottom = 44.0
text = "OGG-Vorbis"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 1044.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 46.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "Folder: "

[node name="DstFolder" type="LinkButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 54.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 4
underline = 1

[node name="Stop" type="TextureButton" parent="HBoxContainer"]
margin_left = 1070.0
margin_top = 21.0
margin_right = 1120.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 30 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/DstFolder" to="." method="OnDstFolderPressed"]
